# checkers

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: checkers.py  main.py
src/client/: __init__.py  dialogs.py  game.py  network_configuration.py
src/engine/: board.py  checker.py  defines.py  utils.py
src/graphics/: __init__.py  checker.py  defines.py  grid.py  main.py
src/logic/: board.py  defines.py  square.py
src/network/: README.md  __init__.py  client.py  server.py  testing.md
tests/: conftest.py  test_engine.py
tests/engine/: test_basic_rules.py  test_move.py  test_valid_moves.py
